basic bearer token auth functionality
