# client-sdk/model_create_bearer_token_input_body.go
@@ -1,0 +1,195 @@
+/*
+Internet Golf API
+
+No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+
+API version: 0.5.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package golfsdk
+
+import (
+	"encoding/json"
+	"bytes"
+	"fmt"
+)
+
+// checks if the CreateBearerTokenInputBody type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &CreateBearerTokenInputBody{}
+
+// CreateBearerTokenInputBody struct for CreateBearerTokenInputBody
+type CreateBearerTokenInputBody struct {
+	// A URL to the JSON Schema for this object.
+	Schema *string `json:"$schema,omitempty"`
+	FullPermissions bool `json:"fullPermissions"`
+}
+
+type _CreateBearerTokenInputBody CreateBearerTokenInputBody
+
+// NewCreateBearerTokenInputBody instantiates a new CreateBearerTokenInputBody object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewCreateBearerTokenInputBody(fullPermissions bool) *CreateBearerTokenInputBody {
+	this := CreateBearerTokenInputBody{}
+	this.FullPermissions = fullPermissions
+	return &this
+}
+
+// NewCreateBearerTokenInputBodyWithDefaults instantiates a new CreateBearerTokenInputBody object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewCreateBearerTokenInputBodyWithDefaults() *CreateBearerTokenInputBody {
+	this := CreateBearerTokenInputBody{}
+	return &this
+}
+
+// GetSchema returns the Schema field value if set, zero value otherwise.
+func (o *CreateBearerTokenInputBody) GetSchema() string {
+	if o == nil || IsNil(o.Schema) {
+		var ret string
+		return ret
+	}
+	return *o.Schema
+}
+
+// GetSchemaOk returns a tuple with the Schema field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *CreateBearerTokenInputBody) GetSchemaOk() (*string, bool) {
+	if o == nil || IsNil(o.Schema) {
+		return nil, false
+	}
+	return o.Schema, true
+}
+
+// HasSchema returns a boolean if a field has been set.
+func (o *CreateBearerTokenInputBody) HasSchema() bool {
+	if o != nil && !IsNil(o.Schema) {
+		return true
+	}
+
+	return false
+}
+
+// SetSchema gets a reference to the given string and assigns it to the Schema field.
+func (o *CreateBearerTokenInputBody) SetSchema(v string) {
+	o.Schema = &v
+}
+
+// GetFullPermissions returns the FullPermissions field value
+func (o *CreateBearerTokenInputBody) GetFullPermissions() bool {
+	if o == nil {
+		var ret bool
+		return ret
+	}
+
+	return o.FullPermissions
+}
+
+// GetFullPermissionsOk returns a tuple with the FullPermissions field value
+// and a boolean to check if the value has been set.
+func (o *CreateBearerTokenInputBody) GetFullPermissionsOk() (*bool, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.FullPermissions, true
+}
+
+// SetFullPermissions sets field value
+func (o *CreateBearerTokenInputBody) SetFullPermissions(v bool) {
+	o.FullPermissions = v
+}
+
+func (o CreateBearerTokenInputBody) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o CreateBearerTokenInputBody) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	if !IsNil(o.Schema) {
+		toSerialize["$schema"] = o.Schema
+	}
+	toSerialize["fullPermissions"] = o.FullPermissions
+	return toSerialize, nil
+}
+
+func (o *CreateBearerTokenInputBody) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"fullPermissions",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err;
+	}
+
+	for _, requiredProperty := range(requiredProperties) {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varCreateBearerTokenInputBody := _CreateBearerTokenInputBody{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varCreateBearerTokenInputBody)
+
+	if err != nil {
+		return err
+	}
+
+	*o = CreateBearerTokenInputBody(varCreateBearerTokenInputBody)
+
+	return err
+}
+
+type NullableCreateBearerTokenInputBody struct {
+	value *CreateBearerTokenInputBody
+	isSet bool
+}
+
+func (v NullableCreateBearerTokenInputBody) Get() *CreateBearerTokenInputBody {
+	return v.value
+}
+
+func (v *NullableCreateBearerTokenInputBody) Set(val *CreateBearerTokenInputBody) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableCreateBearerTokenInputBody) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableCreateBearerTokenInputBody) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableCreateBearerTokenInputBody(val *CreateBearerTokenInputBody) *NullableCreateBearerTokenInputBody {
+	return &NullableCreateBearerTokenInputBody{value: val, isSet: true}
+}
+
+func (v NullableCreateBearerTokenInputBody) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableCreateBearerTokenInputBody) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
