# client-sdk/model_create_bearer_token_output_body.go
@@ -1,0 +1,195 @@
+/*
+Internet Golf API
+
+No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+
+API version: 0.5.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package golfsdk
+
+import (
+	"encoding/json"
+	"bytes"
+	"fmt"
+)
+
+// checks if the CreateBearerTokenOutputBody type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &CreateBearerTokenOutputBody{}
+
+// CreateBearerTokenOutputBody struct for CreateBearerTokenOutputBody
+type CreateBearerTokenOutputBody struct {
+	// A URL to the JSON Schema for this object.
+	Schema *string `json:"$schema,omitempty"`
+	Token string `json:"token"`
+}
+
+type _CreateBearerTokenOutputBody CreateBearerTokenOutputBody
+
+// NewCreateBearerTokenOutputBody instantiates a new CreateBearerTokenOutputBody object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewCreateBearerTokenOutputBody(token string) *CreateBearerTokenOutputBody {
+	this := CreateBearerTokenOutputBody{}
+	this.Token = token
+	return &this
+}
+
+// NewCreateBearerTokenOutputBodyWithDefaults instantiates a new CreateBearerTokenOutputBody object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewCreateBearerTokenOutputBodyWithDefaults() *CreateBearerTokenOutputBody {
+	this := CreateBearerTokenOutputBody{}
+	return &this
+}
+
+// GetSchema returns the Schema field value if set, zero value otherwise.
+func (o *CreateBearerTokenOutputBody) GetSchema() string {
+	if o == nil || IsNil(o.Schema) {
+		var ret string
+		return ret
+	}
+	return *o.Schema
+}
+
+// GetSchemaOk returns a tuple with the Schema field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *CreateBearerTokenOutputBody) GetSchemaOk() (*string, bool) {
+	if o == nil || IsNil(o.Schema) {
+		return nil, false
+	}
+	return o.Schema, true
+}
+
+// HasSchema returns a boolean if a field has been set.
+func (o *CreateBearerTokenOutputBody) HasSchema() bool {
+	if o != nil && !IsNil(o.Schema) {
+		return true
+	}
+
+	return false
+}
+
+// SetSchema gets a reference to the given string and assigns it to the Schema field.
+func (o *CreateBearerTokenOutputBody) SetSchema(v string) {
+	o.Schema = &v
+}
+
+// GetToken returns the Token field value
+func (o *CreateBearerTokenOutputBody) GetToken() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Token
+}
+
+// GetTokenOk returns a tuple with the Token field value
+// and a boolean to check if the value has been set.
+func (o *CreateBearerTokenOutputBody) GetTokenOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Token, true
+}
+
+// SetToken sets field value
+func (o *CreateBearerTokenOutputBody) SetToken(v string) {
+	o.Token = v
+}
+
+func (o CreateBearerTokenOutputBody) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o CreateBearerTokenOutputBody) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	if !IsNil(o.Schema) {
+		toSerialize["$schema"] = o.Schema
+	}
+	toSerialize["token"] = o.Token
+	return toSerialize, nil
+}
+
+func (o *CreateBearerTokenOutputBody) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"token",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err;
+	}
+
+	for _, requiredProperty := range(requiredProperties) {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varCreateBearerTokenOutputBody := _CreateBearerTokenOutputBody{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varCreateBearerTokenOutputBody)
+
+	if err != nil {
+		return err
+	}
+
+	*o = CreateBearerTokenOutputBody(varCreateBearerTokenOutputBody)
+
+	return err
+}
+
+type NullableCreateBearerTokenOutputBody struct {
+	value *CreateBearerTokenOutputBody
+	isSet bool
+}
+
+func (v NullableCreateBearerTokenOutputBody) Get() *CreateBearerTokenOutputBody {
+	return v.value
+}
+
+func (v *NullableCreateBearerTokenOutputBody) Set(val *CreateBearerTokenOutputBody) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableCreateBearerTokenOutputBody) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableCreateBearerTokenOutputBody) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableCreateBearerTokenOutputBody(val *CreateBearerTokenOutputBody) *NullableCreateBearerTokenOutputBody {
+	return &NullableCreateBearerTokenOutputBody{value: val, isSet: true}
+}
+
+func (v NullableCreateBearerTokenOutputBody) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableCreateBearerTokenOutputBody) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
