# golf-openapi.yaml
@@ -19,6 +19,36 @@ components:
       required:
         - externalUserSource
       type: object
+    CreateBearerTokenInputBody:
+      additionalProperties: false
+      properties:
+        $schema:
+          description: A URL to the JSON Schema for this object.
+          examples:
+            - https://example.com/schemas/CreateBearerTokenInputBody.json
+          format: uri
+          readOnly: true
+          type: string
+        fullPermissions:
+          type: boolean
+      required:
+        - fullPermissions
+      type: object
+    CreateBearerTokenOutputBody:
+      additionalProperties: false
+      properties:
+        $schema:
+          description: A URL to the JSON Schema for this object.
+          examples:
+            - https://example.com/schemas/CreateBearerTokenOutputBody.json
+          format: uri
+          readOnly: true
+          type: string
+        token:
+          type: string
+      required:
+        - token
+      type: object
     DeploymentCreateInputBody:
       additionalProperties: false
       properties:
@@ -42,7 +72,7 @@ components:
             - array
             - "null"
         url:
-          $ref: "#/components/schemas/Url"
+          type: string
       required:
         - url
       type: object
@@ -115,6 +145,8 @@ components:
           format: uri
           readOnly: true
           type: string
+        Url:
+          $ref: "#/components/schemas/Url"
         externalSource:
           type: string
         externalSourceType:
@@ -133,10 +165,8 @@ components:
           type:
             - array
             - "null"
-        url:
-          $ref: "#/components/schemas/Url"
       required:
-        - url
+        - Url
         - hasContent
         - servedThing
         - servedThingType
@@ -297,6 +327,29 @@ paths:
                 $ref: "#/components/schemas/ErrorModel"
           description: Error
       summary: Get deployment by URL
+  /token/generate:
+    post:
+      operationId: post-token-generate
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/CreateBearerTokenInputBody"
+        required: true
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/CreateBearerTokenOutputBody"
+          description: OK
+        default:
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Error
+      summary: Post token generate
   /user/register:
     put:
       operationId: put-user-register
